force-app/main/default/objects/NSWCPPPayment__c/NSWCPPPayment__c.object-meta.xml
<CustomObject>
    <label>NSW CPP Payment</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NSW CPP Payments</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>