force-app/main/default/objects/NSWCPPPayment__c/fields/AccountToken__c.field-meta.xml
<CustomField>
    <fullName>AccountToken__c</fullName>
    <label>Account Token</label>
    <length>64</length>
    <type>Text</type>
</CustomField>