force-app/main/default/objects/NSWCPPPayment__c/fields/AmountPaid__c.field-meta.xml
<CustomField>
    <fullName>AmountPaid__c</fullName>
    <label>Amount Paid</label>
    <summarizedField>NSWCPPPaymentStep__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>NSWCPPPaymentStep__c.Status__c</field>
        <operation>equals</operation>
        <value>Completed</value>
    </summaryFilterItems>
    <summaryForeignKey>NSWCPPPaymentStep__c.Payment__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>