force-app/main/default/objects/NSWCPPPayment__c/fields/CallingSystem__c.field-meta.xml
<CustomField>
    <fullName>CallingSystem__c</fullName>
    <label>Calling System</label>
    <length>40</length>
    <type>Text</type>
</CustomField>