force-app/main/default/objects/NSWCPPPayment__c/fields/PaymentCompletionReference__c.field-meta.xml
<CustomField>
    <fullName>PaymentCompletionReference__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Payment Completion Reference</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>