force-app/main/default/objects/NSWCPPPayment__c/fields/PaymentReference__c.field-meta.xml
<CustomField>
    <fullName>PaymentReference__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Payment Reference</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>