force-app/main/default/objects/NSWCPPPayment__c/fields/ProductDescription__c.field-meta.xml
<CustomField>
    <fullName>ProductDescription__c</fullName>
    <label>Product Description</label>
    <type>TextArea</type>
</CustomField>